# Energy-independent-air-quality-monitoring-system-powered-by-solar-energy

./: .cproject.bak  .mxproject  .project  .project.bak  31_05_2024 Debug.launch  31_05_2024.ioc  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  build.ninja  cmake_install.cmake  compile_commands.json
Core/Inc/: fatfs_sd_card.h  globals.h  main.h  sensors.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  user_interface.h
Core/Src/: fatfs_sd_card.c  globals.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  user_interface.c
Debug/: 31_05_2024.list  31_05_2024.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
Debug/Libraries/stm32-bme280-master/: bme280.cyclo  bme280.d  bme280.su  subdir.mk
Libraries/fatfs_sd/: fatfs_sd.c
Libraries/stm32-SEN05XX-master/: sen05xx.c  sen05xx.h
Libraries/stm32-bme280-master/: bme280.c  bme280.h  bme280_support.c
Libraries/stm32-ens160-master/: ens160.c  ens160.h
Libraries/stm32-epd4in2b-master/: epd4in2b.c  epd4in2b.h  epdpaint.c  epdpaint.h  font12.c  font16.c  font20.c  font24.c  font8.c  fonts.h  imagedata.c  imagedata.h
Libraries/stm32-max17048-master/: max.c  max.h
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
